--- a/TM-site/stylefooter.css
+++ b/TM-site/stylefooter.css
@@ -43,6 +43,7 @@
     width: 100%;
     padding-inline: var(--p-inline);
     background-color: var(--color-white);
+    margin-top: 300px;
   
     & .footer-container {
       width: 100%;
