--- a/TheRock/style.css
+++ b/TheRock/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(241, 245, 248);
+    background-color:rgb(244, 247, 248);
 }
 #start{
     position: absolute;
@@ -14,6 +14,7 @@ body{
     width: 390px;
     margin-left: -30px;
     height: 40px;
+    background-color: ;
 }
 .background{
     position: fixed;
